--- a/week10/portfolio/sass/components/_header.scss
+++ b/week10/portfolio/sass/components/_header.scss
@@ -13,6 +13,11 @@
     margin-top: 0px;
     font-family: 'Special Elite', cursive;
 	text-align: center;
+	
+	h1 {
+		font-size: 40px;
+		margin: 15px 0 15px 0;
+	}
 }
 
 .content1 {
@@ -36,6 +41,7 @@
 	h2 {
 		text-align: center;
 		color: #fff;
+		font-size: 32px;
 	}
 }
 
