--- a/week10/portfolio/sass/components/_footer.scss
+++ b/week10/portfolio/sass/components/_footer.scss
@@ -24,7 +24,17 @@
 }
 
 .icons{
-	padding-right: 5px;
+	padding: 5px 10px ;
+	margin-right: 10px;
+	font-size: 40px;
+	background: none repeat scroll 0% 0% #FFF;
+	border-radius: 5px;
+	
+	
+	&:hover {
+		color: #4f055a;
+	}
+
 }
 
 .copyright {
