--- a/week10/portfolio/css/application.css
+++ b/week10/portfolio/css/application.css
@@ -72,18 +72,38 @@
   display: block;
 }
 /* line 19, ../sass/components/_projects.scss */
-.port li {
-  float: left;
-  width: 25%;
-  margin: 0;
-  padding: 0;
-}
-/* line 26, ../sass/components/_projects.scss */
 .port ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   text-align: center;
+}
+/* line 26, ../sass/components/_projects.scss */
+.port li {
+  float: left;
+  width: 25%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  position: relative;
+}
+/* line 34, ../sass/components/_projects.scss */
+.port li .box {
+  width: 100%;
+  position: absolute;
+  padding: .5em;
+  bottom: -60px;
+  left: 0;
+  -webkit-transition: bottom  ease-out 200ms;
+  -moz-transition: bottom  ease-out 200ms;
+  -o-transition: bottom  ease-out 200ms;
+  transition: bottom  ease-out 200ms;
+  color: #fff;
+}
+/* line 47, ../sass/components/_projects.scss */
+.port li:hover .box {
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 /* line 2, ../sass/components/_footer.scss */
