--- a/week10/portfolio/sass/application.scss
+++ b/week10/portfolio/sass/application.scss
@@ -2,3 +2,4 @@
 @import "components/_projects.scss";
 @import "components/_footer.scss";
 @import "components/_links.scss";
+@import "components/_responsive.scss";
